samples/_failures_safe/1761412325_1b178b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a764f24.c: In function ‘main’:
./samples/SAFE/__tmp_4a764f24.c:213:5: error: expected declaration or statement at end of input
  213 |     for (int i = 0; i < token_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_4a764f24.c:213:5: error: expected declaration or statement at end of input
